se agrega opcion PSE

--- a/Pagos.html
+++ b/Pagos.html
@@ -13,6 +13,7 @@
       <option value="Paypal">Paypal</option>
       <option value="PayU">PayU</option>
       <option value="MasterCard">Tarjeta MasterCard</option>
+      <option value="PSE">PSE</option>
     </select>
     <input type="submit" name="enviar" value="Autorizar Compra">
   </form>
