Arreglado texto adicional pagina pagos

--- a/Pagos.html
+++ b/Pagos.html
@@ -14,6 +14,8 @@
       <option value="PayU">PayU</option>
       <option value="MasterCard">Tarjeta MasterCard</option>
       <option value="Visa"> Tarjeta Visa</option>
+      <option value="PSE">PSE</option>
+
     </select>
     <input type="submit" name="enviar" value="Autorizar Compra">
   </form>
